--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -16,9 +16,15 @@ a {
     color: #337ab7;
 }
 
+.small {
+  font-size: 10px;
+  color: #AAA;
+}
+
 .reading h3 {
     font-family: "Roboto Slab", serif;
     font-weight: 400;
     font-size: 48px;
     color: #337ab7;
 }
+
