--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,7 @@
   <% @sorted_articles.each do |article| %>
   <div class="article">
     <h3><%= link_to(article.title, article_path(article.id)) %> </h3>
+    <p class="small"><%= article.created_at.in_time_zone('Paris').strftime("%A, %b %d - %H:%M") %></p>
     <p><%= article.content %></p>
   </div>
   <% end %>
